--- a/UI/Web extension/manifest.json
+++ b/UI/Web extension/manifest.json
@@ -1,14 +1,23 @@
 {
-    "name": "Extension",
-    "version": "1.0.0",
-    "description": "",
-    "manifest_version": 3,
-    "permissions": ["tabs", "activeTab"],
-    "background": {
-      "service_worker": "background.js"
-    },
-    "action": {
-        "default_popup": "index.html",
-        "default_title": "Cool Extension"
+  "name": "Extension",
+  "version": "1.0.0",
+  "description": "",
+  "manifest_version": 3,
+  "permissions": ["tabs", "activeTab"],
+  "host_permissions": [
+    "http://127.0.0.1:5000/*"
+],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "action": {
+      "default_popup": "index.html",
+      "default_title": "Cool Extension"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "css": ["styles.css"]
     }
+  ]
 }
